--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@capacitor/android": "7.4.2",
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "7.4.2",
-    "@capacitor/filesystem": "^7.1.2",
+    "@capacitor/filesystem": "^7.1.4",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
+    "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "7.0.1",
     "@capawesome/capacitor-file-picker": "^7.2.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "cordova-plugin-file-opener2": "^4.0.0",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
